add game variables

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,14 @@ body {
 }
 
 /* Main Game layout */
+
+.user-input {
+    background-color: white;
+    border-radius: 5px;
+    padding: 15px;
+    box-shadow: 0 0 10px 2px;
+}
+
 .container {
     background-color: white;
     border-radius: 5px;
