--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,9 @@ body {
     margin: 5px auto;
     width: 60%;
     font-size: 1.2rem;
+    margin-bottom: 100px;
+    /* Adjust the margin value as needed */
+
 }
 
 .controls-area {
