--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,8 +20,15 @@ body {
 }
 
 /* Main Game layout */
+.user-input1 {
+    background-color: white;
+    border-radius: 5px;
+    padding: 15px;
+    box-shadow: 0 0 10px 2px;
+}
 
-.user-input {
+.user-input2 {
+    display: none;
     background-color: white;
     border-radius: 5px;
     padding: 15px;
@@ -29,6 +36,7 @@ body {
 }
 
 .container {
+    display: none;
     background-color: white;
     border-radius: 5px;
     padding: 15px;
