--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Overall style */
 
 body {
-    background-color: white;
+    background-color: rgb(169, 246, 255);
     font-family: "Open Sans", sans-serif;
     color: #445361;
     text-align: center;
@@ -21,6 +21,7 @@ body {
 
 /* Main Game layout */
 .user-input1 {
+    display: block;
     background-color: white;
     border-radius: 5px;
     padding: 15px;
