--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,15 @@ body {
     box-shadow: 0 0 10px 2px;
 }
 
+/* Style for message when no user input & correct answer when not guessed */
+.user-log-error,
+#correct-answer {
+    font-size: 60%;
+    color: rgb(244, 33, 33);
+    padding-top: 1.2rem;
+    padding: 1.2rem 0.5rem 0;
+}
+
 .user-input2 {
     display: none;
     background-color: white;
