--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,10 @@ body {
     box-shadow: 0 0 10px 2px;
 }
 
+#error-message{
+    display: none;
+}
+
 /* Style for message when no user input & correct answer when not guessed */
 .user-log-error {
     display: none;
@@ -119,12 +123,19 @@ body {
     padding: 25px;
 }
 
-.score-message-hide {
+.hide {
     display: none;
 }
 
 /* --------- Buttons */
-
+#next-btn{
+    display: block;
+    margin-left: 47px;
+}
+#start-btn{
+    display: block;
+    margin-left: 47px;
+}
 .btn {
     width: 220px;
     height: 60px;
@@ -174,6 +185,7 @@ body {
 .btn--gray:hover {
     background-color: #0d1013;
 }
+
 
 
 /* --------- Media queries */
