--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,24 @@ body {
     background-color: #0d1013;
 }
 
+/*Footer*/
+footer {
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgb(169, 246, 255);
+    padding: 20px 0;
+    text-align: center;
+}
+.footer-left img {
+    width: 20px;
+    height: 20px;
+  }
 
+.footer .container {
+    max-width: 960px;
+    margin: 0 auto;
+}
 
 /* --------- Media queries */
 
@@ -260,22 +277,18 @@ body {
 
 /*Footer*/
 footer {
-    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #f8f8f8;
+    background-color: rgb(169, 246, 255);
     padding: 20px 0;
     text-align: center;
-    display: none;
 }
 
 .footer .container {
     max-width: 960px;
     margin: 0 auto;
 }
-
-/* Show the footer when the user scrolls down */
 
 @media (max-width: 320px) {
     .game-area {
