--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,16 +126,21 @@ body {
 .hide {
     display: none;
 }
-
-/*Buttons*/
-#next-btn {
-    display: inline;
-    margin-left: 10px;
+/*Username input*/
+.username-input{
+    width: 260px;
+    height: 30px;
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
-
-#start-btn {
-    display: inline;
-    margin-left: 10px;
+/*Buttons*/
+.button-level{
+    background-color: rgb(205, 244, 248);
+    color: #445361;
+    width: 220px;
+    height: 60px;
+    border-radius: 5px;
+    letter-spacing: 1.2px;
 }
 
 .btn {
@@ -156,36 +161,14 @@ body {
     outline: none;
 }
 
-.btn--big {
-    padding-top: 10px;
-    border-radius: 50%;
-    background-color: white;
-    border: 10px solid;
-    width: 100px;
-    height: 100px;
-    font-size: 3.2rem;
-    margin: 0 30px;
-    transition: all 0.5s;
+#next-btn {
+    display: inline;
+    margin-left: 10px;
 }
 
-.btn--big::after {
-    content: attr(data-type);
-    font-size: 1rem;
-    color: #445361;
-    position: relative;
-    left: -0.5em;
-}
-
-.btn--gray {
-    margin-top: 25px;
-    background-color: #3c4956;
-    border: 1px transparent;
-    border-radius: 20px;
-}
-
-.btn--gray:active,
-.btn--gray:hover {
-    background-color: #0d1013;
+#start-btn {
+    display: inline;
+    margin-left: 10px;
 }
 
 .start-btn,
@@ -225,7 +208,7 @@ footer {
     margin: 0 auto;
 }
 
-/* --------- Media queries */
+/* Media queries */
 
 @media (max-width: 414px) {
     .controls-area {
